--- a/TOneV2/Code/TOneV2/TestRuntime/TestRuntime.csproj
+++ b/TOneV2/Code/TOneV2/TestRuntime/TestRuntime.csproj
@@ -767,6 +767,26 @@
       <Project>{244516F9-E7B8-47D0-B3AF-EC24631BA485}</Project>
       <Name>TOne.LCRProcess</Name>
     </ProjectReference>
+    <ProjectReference Include="..\TOne.WhS.AccountBalance.Business\TOne.WhS.AccountBalance.Business.csproj">
+      <Project>{5a8fe576-bf07-498c-a27f-2100fc828bce}</Project>
+      <Name>TOne.WhS.AccountBalance.Business</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TOne.WhS.AccountBalance.Data.SQL\TOne.WhS.AccountBalance.Data.SQL.csproj">
+      <Project>{a6a5fe20-e968-483c-a6e3-171b3648a67e}</Project>
+      <Name>TOne.WhS.AccountBalance.Data.SQL</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TOne.WhS.AccountBalance.Data\TOne.WhS.AccountBalance.Data.csproj">
+      <Project>{dda303d7-61bb-4a64-9e56-94821bb4bc45}</Project>
+      <Name>TOne.WhS.AccountBalance.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TOne.WhS.AccountBalance.Entities\TOne.WhS.AccountBalance.Entities.csproj">
+      <Project>{6463e524-5b13-453f-bd95-6974ed0c7b86}</Project>
+      <Name>TOne.WhS.AccountBalance.Entities</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TOne.WhS.AccountBalance.MainExtensions\TOne.WhS.AccountBalance.MainExtensions.csproj">
+      <Project>{7947d71a-4077-4559-9614-3628201ac795}</Project>
+      <Name>TOne.WhS.AccountBalance.MainExtensions</Name>
+    </ProjectReference>
     <ProjectReference Include="..\TOne.WhS.Analytics.Business\TOne.WhS.Analytics.Business.csproj">
       <Project>{ed3ad820-6c97-440e-a309-0ec0391b732a}</Project>
       <Name>TOne.WhS.Analytics.Business</Name>
@@ -1021,7 +1041,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
+    <None Include="app.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="app.config.exclude">
       <SubType>Designer</SubType>
     </None>
