--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Entities/TOne.WhS.BusinessEntity.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Entities/TOne.WhS.BusinessEntity.Entities.csproj
@@ -130,6 +130,8 @@
     <Compile Include="RoutingCarrierInfo\RoutingCarrierInfo.cs" />
     <Compile Include="RoutingCarrierInfo\RoutingCustomerInfo.cs" />
     <Compile Include="RoutingCarrierInfo\RoutingSupplierInfo.cs" />
+    <Compile Include="RoutingProduct\History\SaleEntityZoneRoutingProductHistoryQuery.cs" />
+    <Compile Include="RoutingProduct\History\SaleEntityZoneRoutingProductHistoryRecord.cs" />
     <Compile Include="RoutingProduct\SaleEntityZoneRoutingProduct.cs" />
     <Compile Include="RoutingProduct\DefaultRoutingProduct.cs" />
     <Compile Include="RoutingProduct\RoutingProduct.cs" />
