--- a/Vanrise/Code/Vanrise.Caching/Vanrise.Caching.csproj
+++ b/Vanrise/Code/Vanrise.Caching/Vanrise.Caching.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RuntimeCacheFactory.cs" />
     <Compile Include="SlidingWindowCacheExpirationChecker.cs" />
+    <Compile Include="TimeExpirableCacheExpirationChecker.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Vanrise.Common\Vanrise.Common.csproj">
