--- a/Demo.project/Code/Demo.Module.Entities/Demo.Module.Entities.csproj
+++ b/Demo.project/Code/Demo.Module.Entities/Demo.Module.Entities.csproj
@@ -54,6 +54,8 @@
   <ItemGroup>
     <Compile Include="City.cs" />
     <Compile Include="CityDetails.cs" />
+    <Compile Include="CityFilter.cs" />
+    <Compile Include="CityInfo.cs" />
     <Compile Include="CityQ.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="User.cs" />
