--- a/Demo.project/Code/Demo.Module.Web/Demo.Module.Web.csproj
+++ b/Demo.project/Code/Demo.Module.Web/Demo.Module.Web.csproj
@@ -130,8 +130,8 @@
     <Content Include="Demo_Module\Constant\ModuleConfig.js" />
     <Content Include="Demo_Module\Directives\City\Templates\CityGridTemplate.html" />
     <Content Include="Demo_Module\Directives\City\Templates\demo-module-city-grid.js" />
+    <Content Include="Demo_Module\Directives\City\Templates\demo-module-city-selector.js" />
     <Content Include="Demo_Module\Directives\User\templates\demo-module-user-grid.js" />
-    <Content Include="Demo_Module\Directives\User\templates\demo-module-user-selector.js" />
     <Content Include="Demo_Module\Directives\User\templates\UserGridTemplate.html" />
     <Content Include="Demo_Module\Services\APIServices\CityAPIService.js" />
     <Content Include="Demo_Module\Services\APIServices\UserAPIService.js" />
