Editing MigrateAndRouteBuild WF
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C39783

--- a/TOneV2/Code/TOneV2/TOne.WhS.TOneV1Transition/TOne.WhS.TOneV1Transition.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.TOneV1Transition/TOne.WhS.TOneV1Transition.Web.csproj
@@ -146,7 +146,7 @@
   <ItemGroup>
     <Content Include="WhS_TOneV1Transition\Constant\ModuleConfig.js" />
     <Content Include="WhS_TOneV1Transition\Elements\ProcessInput\Directives\Templates\MigrateAndRouteBuildProcessTemplate.html" />
-    <Content Include="WhS_TOneV1Transition\Elements\ProcessInput\vr-whs-migrateandroutebuild-process.js" />
+    <Content Include="WhS_TOneV1Transition\Elements\ProcessInput\Directives\vr-whs-migrateandroutebuild-process.js" />
     <Content Include="WhS_TOneV1Transition\Elements\Settings\Directives\Templates\TOneV1TransitionSettingsEditorTemplate.html" />
     <Content Include="WhS_TOneV1Transition\Elements\Settings\Directives\vr-whs-tonev1transition-settings-editor.js" />
   </ItemGroup>
