--- a/TOneV2/Code/TOneV2/TOne.WhS.TOneV1Transition.BP/TOne.WhS.TOneV1Transition.BP.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.TOneV1Transition.BP/TOne.WhS.TOneV1Transition.BP.csproj
@@ -55,6 +55,13 @@
     <Reference Include="Vanrise.BusinessProcess.Entities">
       <HintPath>..\..\..\..\BusinessProcess\Code\Output\Vanrise.BusinessProcess.Entities.dll</HintPath>
     </Reference>
+    <Reference Include="Vanrise.BusinessProcess.WFActivities">
+      <HintPath>..\..\..\..\BusinessProcess\Code\Vanrise.BusinessProcess.WFActivities\bin\Debug\Vanrise.BusinessProcess.WFActivities.dll</HintPath>
+    </Reference>
+    <Reference Include="Vanrise.Entities, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.Entities.dll</HintPath>
+    </Reference>
     <Reference Include="Vanrise.Runtime.Entities">
       <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.Runtime.Entities.dll</HintPath>
     </Reference>
