--- a/TOneV2/Code/TOneV2/TOne.Web/TOne.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Web/TOne.Web.csproj
@@ -1010,6 +1010,10 @@
       <Project>{31916b09-a29f-4d55-9669-efb6b0d9635b}</Project>
       <Name>TOne.WhS.SupplierPriceList.Web</Name>
     </ProjectReference>
+    <ProjectReference Include="..\TOne.WhS.TOneV1Transition.Arguments\TOne.WhS.TOneV1Transition.BP.Arguments.csproj">
+      <Project>{a522f8b1-8653-4033-a1f5-ae0ba9669061}</Project>
+      <Name>TOne.WhS.TOneV1Transition.BP.Arguments</Name>
+    </ProjectReference>
     <ProjectReference Include="..\TOne.WhS.TOneV1Transition.Business\TOne.WhS.TOneV1Transition.Business.csproj">
       <Project>{421018ba-cefc-42ea-8490-41e7933650eb}</Project>
       <Name>TOne.WhS.TOneV1Transition.Business</Name>
