--- a/TOneV2/Code/TOneV2/TestRuntime/TestRuntime.csproj
+++ b/TOneV2/Code/TOneV2/TestRuntime/TestRuntime.csproj
@@ -119,9 +119,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Resources\DLLs\Mono.Security.dll</HintPath>
     </Reference>
-    <Reference Include="MySql.Data, Version=6.7.4.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
+    <Reference Include="MySql.Data, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Resources\DLLs\MySql.Data.dll</HintPath>
+      <HintPath>..\..\..\..\Vanrise\Code\Resources\DLLs\MySql.Data.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\..\..\..\Vanrise\Code\Resources\DLLs\Newtonsoft.Json.dll</HintPath>
@@ -444,6 +444,10 @@
     <Reference Include="Vanrise.Integration.Adapters.BaseTP">
       <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.Integration.Adapters.BaseTP.dll</HintPath>
     </Reference>
+    <Reference Include="Vanrise.Integration.Adapters.DBBaseReceiveAdapter, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.Integration.Adapters.DBBaseReceiveAdapter.dll</HintPath>
+    </Reference>
     <Reference Include="Vanrise.Integration.Adapters.DBReceiveAdapter.Arguments">
       <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.Integration.Adapters.DBReceiveAdapter.Arguments.dll</HintPath>
     </Reference>
@@ -461,6 +465,10 @@
     </Reference>
     <Reference Include="Vanrise.Integration.Adapters.MySQLReceiveAdapter">
       <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.Integration.Adapters.MySQLReceiveAdapter.dll</HintPath>
+    </Reference>
+    <Reference Include="Vanrise.Integration.Adapters.MySQLReceiveAdapter.Arguments, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.Integration.Adapters.MySQLReceiveAdapter.Arguments.dll</HintPath>
     </Reference>
     <Reference Include="Vanrise.Integration.Adapters.PostgresReceiveAdapter">
       <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.Integration.Adapters.PostgresReceiveAdapter.dll</HintPath>
