--- a/Vanrise/Code/Vanrise.Integration.Adapters.DBBaseReceiveAdapter/Vanrise.Integration.Adapters.DBBaseReceiveAdapter.csproj
+++ b/Vanrise/Code/Vanrise.Integration.Adapters.DBBaseReceiveAdapter/Vanrise.Integration.Adapters.DBBaseReceiveAdapter.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F3EAA11E-1F77-4E0A-84E8-2BEBEFAF0A13}</ProjectGuid>
+    <ProjectGuid>{0F3AE743-A034-406D-A341-021029B8EF1B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Vanrise.Integration.Adapters.PostgresReceiveAdapter.Arguments</RootNamespace>
-    <AssemblyName>Vanrise.Integration.Adapters.PostgresReceiveAdapter.Arguments</AssemblyName>
+    <RootNamespace>Vanrise.Integration.Adapters.DBBaseReceiveAdapter</RootNamespace>
+    <AssemblyName>Vanrise.Integration.Adapters.DBBaseReceiveAdapter</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SccProjectName>SAK</SccProjectName>
@@ -43,17 +43,27 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PostgresAdapterArgument.cs" />
+    <Compile Include="DBAdapterRangesState.cs" />
+    <Compile Include="DbBaseAdapterArgument.cs" />
+    <Compile Include="DbBaseReceiveAdapter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Vanrise.Integration.Adapters.DBBaseReceiveAdapter\Vanrise.Integration.Adapters.DBBaseReceiveAdapter.csproj">
-      <Project>{0f3ae743-a034-406d-a341-021029b8ef1b}</Project>
-      <Name>Vanrise.Integration.Adapters.DBBaseReceiveAdapter</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Vanrise.Integration.Entities\Vanrise.Integration.Entities.csproj">
       <Project>{bc343c8c-a1ba-4d9e-b4da-c59029594d50}</Project>
       <Name>Vanrise.Integration.Entities</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Vanrise.Runtime.Business\Vanrise.Runtime.Business.csproj">
+      <Project>{7b928ba5-c19b-4d8c-912f-8d2d8a679718}</Project>
+      <Name>Vanrise.Runtime.Business</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Vanrise.Runtime.Entities\Vanrise.Runtime.Entities.csproj">
+      <Project>{07b66e74-bd84-4023-b839-5bb522b7a98c}</Project>
+      <Name>Vanrise.Runtime.Entities</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Vanrise.Runtime\Vanrise.Runtime.csproj">
+      <Project>{2cdddf60-45b6-4ce6-ac2b-4470bb9bfe96}</Project>
+      <Name>Vanrise.Runtime</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
