--- a/Vanrise/Code/Vanrise.Integration.Adapters.MySQLReceiveAdapter.Arguments/Vanrise.Integration.Adapters.MySQLReceiveAdapter.Arguments.csproj
+++ b/Vanrise/Code/Vanrise.Integration.Adapters.MySQLReceiveAdapter.Arguments/Vanrise.Integration.Adapters.MySQLReceiveAdapter.Arguments.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F3EAA11E-1F77-4E0A-84E8-2BEBEFAF0A13}</ProjectGuid>
+    <ProjectGuid>{39FFC05B-1C3C-46C7-A961-E54AB259AF8E}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Vanrise.Integration.Adapters.PostgresReceiveAdapter.Arguments</RootNamespace>
-    <AssemblyName>Vanrise.Integration.Adapters.PostgresReceiveAdapter.Arguments</AssemblyName>
+    <RootNamespace>Vanrise.Integration.Adapters.MySQLReceiveAdapter.Arguments</RootNamespace>
+    <AssemblyName>Vanrise.Integration.Adapters.MySQLReceiveAdapter.Arguments</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SccProjectName>SAK</SccProjectName>
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PostgresAdapterArgument.cs" />
+    <Compile Include="MySQLAdapterArgument.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
