--- a/Vanrise/Code/Vanrise.Integration.Adapters.MySQLReceiveAdapter/Vanrise.Integration.Adapters.MySQLReceiveAdapter.csproj
+++ b/Vanrise/Code/Vanrise.Integration.Adapters.MySQLReceiveAdapter/Vanrise.Integration.Adapters.MySQLReceiveAdapter.csproj
@@ -51,9 +51,13 @@
     <Compile Include="MySQLReceiveAdapter.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Vanrise.Integration.Adapters.DBReceiveAdapter.Arguments\Vanrise.Integration.Adapters.DBReceiveAdapter.Arguments.csproj">
-      <Project>{cb9c51d9-f3e9-4025-80b7-60207980ac9c}</Project>
-      <Name>Vanrise.Integration.Adapters.DBReceiveAdapter.Arguments</Name>
+    <ProjectReference Include="..\Vanrise.Integration.Adapters.DBBaseReceiveAdapter\Vanrise.Integration.Adapters.DBBaseReceiveAdapter.csproj">
+      <Project>{0f3ae743-a034-406d-a341-021029b8ef1b}</Project>
+      <Name>Vanrise.Integration.Adapters.DBBaseReceiveAdapter</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Vanrise.Integration.Adapters.MySQLReceiveAdapter.Arguments\Vanrise.Integration.Adapters.MySQLReceiveAdapter.Arguments.csproj">
+      <Project>{39ffc05b-1c3c-46c7-a961-e54ab259af8e}</Project>
+      <Name>Vanrise.Integration.Adapters.MySQLReceiveAdapter.Arguments</Name>
     </ProjectReference>
     <ProjectReference Include="..\Vanrise.Integration.Business\Vanrise.Integration.Business.csproj">
       <Project>{1f22483a-d3db-48ee-aea8-8988bdb3b9a1}</Project>
@@ -62,6 +66,10 @@
     <ProjectReference Include="..\Vanrise.Integration.Entities\Vanrise.Integration.Entities.csproj">
       <Project>{bc343c8c-a1ba-4d9e-b4da-c59029594d50}</Project>
       <Name>Vanrise.Integration.Entities</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Vanrise.Runtime\Vanrise.Runtime.csproj">
+      <Project>{2cdddf60-45b6-4ce6-ac2b-4470bb9bfe96}</Project>
+      <Name>Vanrise.Runtime</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
