--- a/TOneV2/Code/TOneV2/TOne.WhS.TOneV1Transition.Arguments/TOne.WhS.TOneV1Transition.BP.Arguments.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.TOneV1Transition.Arguments/TOne.WhS.TOneV1Transition.BP.Arguments.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{A522F8B1-8653-4033-A1F5-AE0BA9669061}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TOne.WhS.TOneV1Transition.Arguments</RootNamespace>
-    <AssemblyName>TOne.WhS.TOneV1Transition.Arguments</AssemblyName>
+    <RootNamespace>TOne.WhS.TOneV1Transition.BP.Arguments</RootNamespace>
+    <AssemblyName>TOne.WhS.TOneV1Transition.BP.Arguments</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SccProjectName>SAK</SccProjectName>
