--- a/TOneV2/Code/TOneV2/TOne.WhS.TOneV1Transition.BP.Activities/TOne.WhS.TOneV1Transition.BP.Activities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.TOneV1Transition.BP.Activities/TOne.WhS.TOneV1Transition.BP.Activities.csproj
@@ -37,6 +37,7 @@
     <Reference Include="System" />
     <Reference Include="System.Activities" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.DurableInstancing" />
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -50,6 +51,9 @@
     <Reference Include="Vanrise.BusinessProcess.Entities">
       <HintPath>..\..\..\..\BusinessProcess\Code\Output\Vanrise.BusinessProcess.Entities.dll</HintPath>
     </Reference>
+    <Reference Include="Vanrise.Caching">
+      <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.Caching.dll</HintPath>
+    </Reference>
     <Reference Include="Vanrise.Entities">
       <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.Entities.dll</HintPath>
     </Reference>
@@ -58,6 +62,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BPMigrationContext.cs" />
     <Compile Include="LoadProcessesInput.cs" />
     <Compile Include="ExecuteMigration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -66,6 +71,10 @@
     <ProjectReference Include="..\TOne.WhS.DBSync.Business\TOne.WhS.DBSync.Business.csproj">
       <Project>{66a454c0-d24c-4378-942f-4b7bc0f1e05a}</Project>
       <Name>TOne.WhS.DBSync.Business</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TOne.WhS.DBSync.Entities\TOne.WhS.DBSync.Entities.csproj">
+      <Project>{9e22928e-0cf2-459d-979f-3551145ad291}</Project>
+      <Name>TOne.WhS.DBSync.Entities</Name>
     </ProjectReference>
     <ProjectReference Include="..\TOne.WhS.Routing.BP.Arguments\TOne.WhS.Routing.BP.Arguments.csproj">
       <Project>{7b185135-b5a8-4416-8b8a-66a261d7dd31}</Project>
