adding new files for action audit
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C39817

--- a/Vanrise/Code/Vanrise.Common.Web/Vanrise.Common.Web.csproj
+++ b/Vanrise/Code/Vanrise.Common.Web/Vanrise.Common.Web.csproj
@@ -342,6 +342,7 @@
     <Content Include="Common\Directives\VRObjectVariable\vr-common-objectvariable-management.js" />
     <Content Include="Common\ModuleInitialization.js" />
     <Content Include="Common\Services\APIServices\ActionAuditAPIService.js" />
+    <Content Include="Common\Services\APIServices\ActionAuditLKUPAPIService.js" />
     <Content Include="Common\Services\APIServices\BankDetailAPIService.js" />
     <Content Include="Common\Services\APIServices\CompanySettingsAPIService.js" />
     <Content Include="Common\Services\APIServices\VRApplicationVisibilityAPIService.js" />
