--- a/Vanrise/Code/Vanrise.Entities/Vanrise.Entities.csproj
+++ b/Vanrise/Code/Vanrise.Entities/Vanrise.Entities.csproj
@@ -69,6 +69,8 @@
     <Compile Include="UISettingData.cs" />
     <Compile Include="VRActionAudit\VRActionAudit.cs" />
     <Compile Include="VRActionAudit\VRActionAuditLKUP.cs" />
+    <Compile Include="VRActionAudit\VRActionAuditLKUPInfoFilter.cs" />
+    <Compile Include="VRActionAudit\VRActionAuditLKUPInfo.cs" />
     <Compile Include="VRActionAudit\VRActionAuditLKUPType.cs" />
     <Compile Include="VRApplicationVisibility\VRApplicationVisibility.cs" />
     <Compile Include="VRApplicationVisibility\VRApplicationVisibilityDetail.cs" />
