Add Max DOP to Migration, Update MVTS Sync to include DOP on index creation
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C39834

--- a/TOneV2/Code/TOneV2/TOne.WhS.DBSync.Entities/TOne.WhS.DBSync.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.DBSync.Entities/TOne.WhS.DBSync.Entities.csproj
@@ -84,6 +84,8 @@
     <Compile Include="Common\GeneratedIDsInfoContext.cs" />
     <Compile Include="Common\MigrationContext.cs" />
     <Compile Include="Common\MigrationCredentials.cs" />
+    <Compile Include="Common\ParameterDefinition.cs" />
+    <Compile Include="Common\ParameterValue.cs" />
     <Compile Include="IDManagerEntity.cs" />
     <Compile Include="Rules\RuleEntitiesEnum.cs" />
     <Compile Include="Rules\RuleMigratorContext.cs" />
