added VRActionLogger and completed Action Audit and Object Tracking
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C39837

--- a/Vanrise/Code/Vanrise.Common.Data.SQL/Vanrise.Common.Data.SQL.csproj
+++ b/Vanrise/Code/Vanrise.Common.Data.SQL/Vanrise.Common.Data.SQL.csproj
@@ -53,6 +53,8 @@
     <Compile Include="VRConnectionDataManager.cs" />
     <Compile Include="UserActionAuditDataManager.cs" />
     <Compile Include="VRComponentTypeDataManager.cs" />
+    <Compile Include="VRLoggableEntityDataManager.cs" />
+    <Compile Include="VRObjectTrackingDataManager.cs" />
     <Compile Include="VRZoneTimeDataManager.cs" />
     <Compile Include="DataGroupingAnalysisInfoDataManager.cs" />
     <Compile Include="StyleDefinitionDataManager.cs" />
