--- a/Vanrise/Code/Vanrise.Common.Business/Vanrise.Common.Business.csproj
+++ b/Vanrise/Code/Vanrise.Common.Business/Vanrise.Common.Business.csproj
@@ -71,6 +71,9 @@
     <Compile Include="StatusDefinitionFilterContext.cs" />
     <Compile Include="VRActionAudit\VRActionAuditLKUPManager.cs" />
     <Compile Include="VRActionAudit\VRActionAuditManager.cs" />
+    <Compile Include="VRActionAudit\VRActionLogger.cs" />
+    <Compile Include="VRActionAudit\VRLoggableEntityManager.cs" />
+    <Compile Include="VRActionAudit\VRObjectTrackingManager.cs" />
     <Compile Include="VRApplicationVisibility\VRApplicationVisibilityManager.cs" />
     <Compile Include="VRConnections\SQLConnection.cs" />
     <Compile Include="VRConnections\VRConnectionManager.cs" />
