--- a/Retail/Code/Retail.BusinessEntity.Business/Retail.BusinessEntity.Business.csproj
+++ b/Retail/Code/Retail.BusinessEntity.Business/Retail.BusinessEntity.Business.csproj
@@ -132,11 +132,14 @@
   <ItemGroup>
     <Compile Include="AccountActionManager.cs" />
     <Compile Include="AccountBalanceManager.cs" />
+    <Compile Include="PackageDefinitionAddOrEditFilter.cs" />
+    <Compile Include="PackageViewSettings.cs" />
     <Compile Include="AccountGenericFields\AccountSourceIdGenericField.cs" />
     <Compile Include="AccountGenericFields\AccountCreatedTimeGenericField.cs" />
     <Compile Include="AccountServiceGenericFields\AccountExtraFieldSettingsContext.cs" />
     <Compile Include="AccountSynchronizerHandlerManager.cs" />
     <Compile Include="AccountActionDefinitionCheckAccessContext.cs" />
+    <Compile Include="AccountViewDefinitionCheckAccessContext .cs" />
     <Compile Include="ConfigManager.cs" />
     <Compile Include="Extensions\BaseAccountBalanceAlertVRAction.cs" />
     <Compile Include="Filters\IAccountFilter\AccountBalanceEnabledAccountFilter.cs" />
