Add reference from output folder
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C39846

--- a/TOneV2/Code/TOneV2/TOne.WhS.TOneV1Transition.BP/TOne.WhS.TOneV1Transition.BP.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.TOneV1Transition.BP/TOne.WhS.TOneV1Transition.BP.csproj
@@ -56,7 +56,7 @@
       <HintPath>..\..\..\..\BusinessProcess\Code\Output\Vanrise.BusinessProcess.Entities.dll</HintPath>
     </Reference>
     <Reference Include="Vanrise.BusinessProcess.WFActivities">
-      <HintPath>..\..\..\..\BusinessProcess\Code\Vanrise.BusinessProcess.WFActivities\bin\Debug\Vanrise.BusinessProcess.WFActivities.dll</HintPath>
+      <HintPath>..\..\..\..\BusinessProcess\Code\Output\Vanrise.BusinessProcess.WFActivities.dll</HintPath>
     </Reference>
     <Reference Include="Vanrise.Entities, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
