Add MaxDOP to route processes + enhance tracking messages in route sync + expose index command timeout for route sync process
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C39868

--- a/TOneV2/Code/TOneV2/TOne.WhS.RouteSync.Entities/TOne.WhS.RouteSync.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.RouteSync.Entities/TOne.WhS.RouteSync.Entities.csproj
@@ -56,6 +56,7 @@
     <Compile Include="BusinessManagers\BEManagerFactory.cs" />
     <Compile Include="BusinessManagers\IBEManager.cs" />
     <Compile Include="BusinessManagers\IRouteSyncDefinitionManager.cs" />
+    <Compile Include="ISwapTableContext.cs" />
     <Compile Include="RouteEntities\ConvertedRoute.cs" />
     <Compile Include="RouteEntities\ConvertedRouteBatch.cs" />
     <Compile Include="RouteEntities\RouteBatch.cs" />
