ProductFamily and Product security and trimming
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C39885

--- a/Retail/Code/Retail.BusinessEntity.Business/Retail.BusinessEntity.Business.csproj
+++ b/Retail/Code/Retail.BusinessEntity.Business/Retail.BusinessEntity.Business.csproj
@@ -132,7 +132,10 @@
   <ItemGroup>
     <Compile Include="AccountActionManager.cs" />
     <Compile Include="AccountBalanceManager.cs" />
+    <Compile Include="ProductFamilyAddOrEditFilter.cs" />
+    <Compile Include="ProductDefinitionAddOrEditFilter.cs" />
     <Compile Include="PackageDefinitionAddOrEditFilter.cs" />
+    <Compile Include="ProductViewSettings.cs" />
     <Compile Include="PackageViewSettings.cs" />
     <Compile Include="AccountGenericFields\AccountSourceIdGenericField.cs" />
     <Compile Include="AccountGenericFields\AccountCreatedTimeGenericField.cs" />
