--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/TOne.WhS.BusinessEntity.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/TOne.WhS.BusinessEntity.Web.csproj
@@ -301,8 +301,8 @@
     <Content Include="WhS_BusinessEntity\Directives\MainExtensions\VRObjectTypes\vr-whs-be-customerpropertyevaluator.js" />
     <Content Include="WhS_BusinessEntity\Directives\MainExtensions\VRObjectTypes\vr-whs-be-customerobjecttype.js" />
     <Content Include="WhS_BusinessEntity\Directives\Period\vr-whs-be-period-selector.js" />
-    <Content Include="WhS_BusinessEntity\Directives\SaleRate\History\Template\SaleRateHistoryGridTemplate.html" />
-    <Content Include="WhS_BusinessEntity\Directives\SaleRate\History\vr-whs-be-salerate-history-grid.js" />
+    <Content Include="WhS_BusinessEntity\Directives\SaleRate\Templates\SaleRateHistoryGridTemplate.html" />
+    <Content Include="WhS_BusinessEntity\Directives\SaleRate\vr-whs-be-salerate-history-grid.js" />
     <Content Include="WhS_BusinessEntity\Directives\ZoneRoutingProduct\Templates\SaleEntityZoneRoutingProductHistoryGridTemplate.html" />
     <Content Include="WhS_BusinessEntity\Directives\ZoneRoutingProduct\vr-whs-be-saleentityzoneroutingproduct-history-grid.js" />
     <Content Include="WhS_BusinessEntity\Directives\RoutingProduct\Templates\RoutingProductGridTemplate.html" />
@@ -311,10 +311,6 @@
     <Content Include="WhS_BusinessEntity\Directives\SalePriceListChange\Templates\SalePriceListRateChangeTemplate.html" />
     <Content Include="WhS_BusinessEntity\Directives\SalePriceListChange\vr-whs-be-salepricelistcodechange-grid.js" />
     <Content Include="WhS_BusinessEntity\Directives\SalePriceListChange\vr-whs-be-salepricelistratechange-grid.js" />
-    <Content Include="WhS_BusinessEntity\Directives\SaleRate\History\Template\CustomerZoneRateHistoryGridTemplate.html" />
-    <Content Include="WhS_BusinessEntity\Directives\SaleRate\History\Template\SellingProductZoneRateHistoryGridTemplate.html" />
-    <Content Include="WhS_BusinessEntity\Directives\SaleRate\History\vr-whs-be-salerate-history-customer-grid.js" />
-    <Content Include="WhS_BusinessEntity\Directives\SaleRate\History\vr-whs-be-salerate-history-sellingproduct-grid.js" />
     <Content Include="WhS_BusinessEntity\Directives\Settings\Templates\SaleAreaSettingsTemplate.html" />
     <Content Include="WhS_BusinessEntity\Directives\Settings\vr-whs-be-salearea-settings-editor.js" />
     <Content Include="WhS_BusinessEntity\Directives\SaleCode\Templates\SaleCodeGridTemplate.html" />
@@ -563,7 +559,9 @@
   <ItemGroup>
     <Content Include="WhS_BusinessEntity\Templates\CodeGroupTemplate.xlsx" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="WhS_BusinessEntity\Directives\SaleRate\History\Template\" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
